--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       # devices to build for
       matrix:
-        board: [LINUX, ESP32, ESP8266_BOARD, ESP8266_4MB, MICROBIT1, MICROBIT2]
+        board: [LINUX, MICROBIT2]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
@@ -74,7 +74,7 @@ jobs:
     strategy:
       # devices to build for
       matrix:
-        board: [PUCKJS, PIXLJS, JOLTJS, MDBT42Q, BANGLEJS, BANGLEJS2, PUCKJS_MINIMAL]
+        board: [PUCKJS]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
@@ -109,7 +109,7 @@ jobs:
     strategy:
       # devices to build for
       matrix:
-        board: [ESPRUINOBOARD, PICO_R1_3, ESPRUINOWIFI]
+        board: [ESPRUINOWIFI, NUCLEOF411RE]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
