--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       # devices to build for
       matrix:
-        board: [LINUX, ESP32, ESP8266_BOARD, ESP8266_4MB, MICROBIT1, MICROBIT2, ESP32C3_IDF4]
+        board: [LINUX]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
@@ -67,40 +67,40 @@ jobs:
           bin/*.zip
     
         
-  # Builds with DFU_UPDATE_BUILD=1        
-  build_dfu:
-    if: ${{ github.event_name != 'workflow_dispatch' || inputs.enable_dfu }}
-    runs-on: ubuntu-20.04
-    strategy:
-      # devices to build for
-      matrix:
-        board: [PUCKJS, PIXLJS, JOLTJS, MDBT42Q, BANGLEJS, BANGLEJS2, PUCKJS_MINIMAL]
-      # try and build for all devices even if one fails
-      fail-fast: false 
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0    
-    - name: make ${{ matrix.board }}
-      env:
-        TRAVIS: 1
-        RELEASE: 1
-        DFU_UPDATE_BUILD: 1
-        BOARD: ${{ matrix.board }} 
-        UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}  
-      run: |
-        source ./scripts/provision.sh  ${{ matrix.board }}
-        make
-        ./scripts/ci_upload.sh       
-    - name: Upload ${{ matrix.board }} build artifact
-      uses: actions/upload-artifact@v4.3.4
-      with:
-        name: ${{ matrix.board }}
-        path: |
-          bin/*.bin
-          bin/*.hex
-          bin/*.tgz
-          bin/*.zip
+  # # Builds with DFU_UPDATE_BUILD=1        
+  # build_dfu:
+  #   if: ${{ github.event_name != 'workflow_dispatch' || inputs.enable_dfu }}
+  #   runs-on: ubuntu-20.04
+  #   strategy:
+  #     # devices to build for
+  #     matrix:
+  #       board: [PUCKJS, PIXLJS, JOLTJS, MDBT42Q, BANGLEJS, BANGLEJS2, PUCKJS_MINIMAL]
+  #     # try and build for all devices even if one fails
+  #     fail-fast: false 
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 0    
+  #   - name: make ${{ matrix.board }}
+  #     env:
+  #       TRAVIS: 1
+  #       RELEASE: 1
+  #       DFU_UPDATE_BUILD: 1
+  #       BOARD: ${{ matrix.board }} 
+  #       UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}  
+  #     run: |
+  #       source ./scripts/provision.sh  ${{ matrix.board }}
+  #       make
+  #       ./scripts/ci_upload.sh       
+  #   - name: Upload ${{ matrix.board }} build artifact
+  #     uses: actions/upload-artifact@v4.3.4
+  #     with:
+  #       name: ${{ matrix.board }}
+  #       path: |
+  #         bin/*.bin
+  #         bin/*.hex
+  #         bin/*.tgz
+  #         bin/*.zip
        
   # Builds with PAD_FOR_BOOTLOADER=1
   build_padded:
@@ -109,7 +109,7 @@ jobs:
     strategy:
       # devices to build for
       matrix:
-        board: [ESPRUINOBOARD, PICO_R1_3, ESPRUINOWIFI]
+        board: [ESPRUINOWIFI, NUC411net]
       # try and build for all devices even if one fails
       fail-fast: false 
     steps:
@@ -137,36 +137,36 @@ jobs:
           bin/*.tgz
           bin/*.zip
  
-  # emulator builds
-  build_emulator:
-    if: ${{ github.event_name != 'workflow_dispatch' || inputs.enable_emulator }}
-    runs-on: ubuntu-20.04
-    strategy:
-      # devices to build for
-      matrix:  # banglejs,   banglejs2
-        board: [EMSCRIPTEN, EMSCRIPTEN2]
-      # try and build for all devices even if one fails
-      fail-fast: false 
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-    - name: make ${{ matrix.board }}
-      env:
-        TRAVIS: 1
-        RELEASE: 1
-        BOARD: ${{ matrix.board }} 
-        UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}  
-      run: |
-        source ./scripts/provision.sh  ${{ matrix.board }}
-        make
-        ./scripts/ci_upload.sh
-    - name: Upload ${{ matrix.board }} build artifact
-      uses: actions/upload-artifact@v4.3.4
-      with:
-        name: ${{ matrix.board }}
-        path: |
-          bin/*.js
+  # # emulator builds
+  # build_emulator:
+  #   if: ${{ github.event_name != 'workflow_dispatch' || inputs.enable_emulator }}
+  #   runs-on: ubuntu-20.04
+  #   strategy:
+  #     # devices to build for
+  #     matrix:  # banglejs,   banglejs2
+  #       board: [EMSCRIPTEN, EMSCRIPTEN]
+  #     # try and build for all devices even if one fails
+  #     fail-fast: false 
+  #   steps:
+  #   - uses: actions/checkout@v4
+  #     with:
+  #       fetch-depth: 0
+  #   - name: make ${{ matrix.board }}
+  #     env:
+  #       TRAVIS: 1
+  #       RELEASE: 1
+  #       BOARD: ${{ matrix.board }} 
+  #       UPLOADTOKEN: ${{ secrets.UPLOADTOKEN }}  
+  #     run: |
+  #       source ./scripts/provision.sh  ${{ matrix.board }}
+  #       make
+  #       ./scripts/ci_upload.sh
+  #   - name: Upload ${{ matrix.board }} build artifact
+  #     uses: actions/upload-artifact@v4.3.4
+  #     with:
+  #       name: ${{ matrix.board }}
+  #       path: |
+  #         bin/*.js
  
 # Disable doc building for now 
 #  docs:
